k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagepry-deployment
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imagepry
      product: api
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: imagepry
        product: api
        tier: frontend
    spec:
      containers:
      - name: imagepry
        image: claudiotx/imagepry:ed3d3bd5d11b8beaa501752fa1343d95489313db
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        
        livenessProbe:
          initialDelaySeconds: 30  # Increased delay to allow the app to start
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            path: /
            port: 3000
        readinessProbe:
          initialDelaySeconds: 30  # Increased delay to allow the app to start
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            path: /
            port: 3000
        resources:
          limits:
            cpu: 75m
            memory: 148Mi
          requests:
            cpu: 25m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
